add_library(
    remote
    provider.h provider.cpp
    stub.cpp skeleton.cpp
)

#set(ENABLED_PROVIDER_TARGETS
#    ${ENABLED_PROVIDER_TARGETS} remote
#    PARENT_SCOPE)

#set(ENABLED_PROVIDER_TARGETS_DEFINITIONS
#    -DCOM_UBUNTU_LOCATION_SERVICE_PROVIDERS_REMOTE ${ENABLED_PROVIDER_TARGETS_DEFINITIONS}
#    PARENT_SCOPE)
